--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.4.0",
     "axios": "^1.4.0",
     "vue": "^3.2.47",
     "vue-country-flag-next": "^2.3.2"
